<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/two_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/hight_50"
        android:background="@drawable/up_bg" >

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/padding"
            android:text="@string/search_name"
            android:textColor="@color/text_name_color"
            android:textSize="@dimen/textsize_16" />

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="@dimen/width_30"
            android:layout_height="@dimen/hight_30"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="@dimen/padding"
            android:src="@drawable/menu" />

        <ImageView
            android:id="@+id/iv_search2"
            android:layout_width="@dimen/width_240"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/text_name"
            android:paddingLeft="@dimen/padding"
            android:src="@drawable/up_logo" />

        <EditText
            android:id="@+id/EditText1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/hight_25"
            android:layout_alignLeft="@+id/iv_search2"
            android:layout_alignRight="@+id/iv_search2"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:background="@color/transport"
            android:drawableLeft="@drawable/search"
            android:ems="10"
            android:hint="@string/search_textname"
            android:textColorHint="@color/text_name_color"
            android:textSize="@dimen/textsize_12" />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:background="@drawable/severity" />

    <GridLayout
        android:id="@+id/gl_gridlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:rowCount="3" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#fff" >

            <ImageView
                android:id="@+id/iv_machinery"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:padding="40dp"
                android:src="@drawable/tool" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/iv_machinery"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="25dp"
                android:text="@string/main_gd1" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="208dp"
            android:layout_height="120dp"
            android:layout_margin="1dp"
            android:background="#fff"
            android:padding="@dimen/padding"
            android:src="@drawable/photo" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#fff" >

            <ImageView
                android:id="@+id/iv_shopping"
                android:layout_width="150dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:background="#fff"
                android:padding="40dp"
                android:src="@drawable/supermarket" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/iv_shopping"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="25dp"
                android:text="@string/main_gd2" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="fill"
            android:layout_margin="1dp"
            android:layout_rowSpan="2"
            android:background="#fff"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="20dp" >

                <ImageView
                    android:id="@+id/iv_dry"
                    style="@style/GridLayoutSytle"
                    android:src="@drawable/dry" />

                <ImageView
                    android:id="@+id/iv_output"
                    style="@style/GridLayoutSytle"
                    android:src="@drawable/output" />

                <ImageView
                    android:id="@+id/iv_insurance"
                    style="@style/GridLayoutSytle"
                    android:src="@drawable/insurance" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="20dp" >

                <ImageView
                    android:id="@+id/iv_money"
                    style="@style/GridLayoutSytle"
                    android:src="@drawable/money" />

                <ImageView
                    android:id="@+id/iv_input"
                    style="@style/GridLayoutSytle"
                    android:src="@drawable/input" />

                <ImageView
                    android:id="@+id/iv_law"
                    style="@style/GridLayoutSytle"
                    android:src="@drawable/law" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#fff" >

            <ImageView
                android:id="@+id/iv_learing"
                android:layout_width="150dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:padding="40dp"
                android:src="@drawable/learning" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/iv_learing"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="25dp"
                android:text="@string/main_gd3" />
        </RelativeLayout>
    </GridLayout>

</LinearLayout>